[gd_scene load_steps=7 format=3 uid="uid://bvlpqimnxjl7x"]

[ext_resource type="PackedScene" uid="uid://c121f2x51ohax" path="res://scenes/objects/item_container/item_container.tscn" id="1_fam1s"]
[ext_resource type="Texture2D" uid="uid://cksk24vbly12p" path="res://assets/imported/resources/graphics/objects/box/base.png" id="2_i2676"]
[ext_resource type="Script" path="res://scenes/objects/item_container/crate.gd" id="2_vfpdh"]
[ext_resource type="Texture2D" uid="uid://ckbevyuh1w7ui" path="res://assets/imported/resources/graphics/objects/box/lid.png" id="3_rgkyd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q2as6"]
size = Vector2(408, 188)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_twuu0"]
size = Vector2(512, 271)

[node name="Crate" instance=ExtResource("1_fam1s")]
script = ExtResource("2_vfpdh")

[node name="BaseSprite" parent="." index="0"]
texture = ExtResource("2_i2676")

[node name="LidSprite" parent="." index="1"]
position = Vector2(0, 5)
texture = ExtResource("3_rgkyd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_q2as6")

[node name="Marker2D" type="Marker2D" parent="SpawnPositions" index="0"]

[node name="Marker2D2" type="Marker2D" parent="SpawnPositions" index="1"]
position = Vector2(-151, -38)

[node name="Marker2D3" type="Marker2D" parent="SpawnPositions" index="2"]
position = Vector2(-147, 21)

[node name="Marker2D4" type="Marker2D" parent="SpawnPositions" index="3"]
position = Vector2(-63, -37)

[node name="Marker2D5" type="Marker2D" parent="SpawnPositions" index="4"]
position = Vector2(51, 27)

[node name="Marker2D6" type="Marker2D" parent="SpawnPositions" index="5"]
position = Vector2(43, -46)

[node name="Marker2D7" type="Marker2D" parent="SpawnPositions" index="6"]
position = Vector2(101, -1)

[node name="AudioStreamPlayer2D" parent="." index="4"]
bus = &"SFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact_Area2D" index="0"]
position = Vector2(5, 9.5)
shape = SubResource("RectangleShape2D_twuu0")
debug_color = Color(0, 0.630342, 0.473507, 0.42)

[connection signal="body_entered" from="Interact_Area2D" to="." method="_on_interact_area_2d_body_entered"]
[connection signal="body_exited" from="Interact_Area2D" to="." method="_on_interact_area_2d_body_exited"]
